# tetris_ncurses

./: CMakeLists.txt  README.md  colors.txt
include/: Bricks.hpp  Ground.hpp  Main.hpp  Menu.hpp  Settings.hpp  Utilits.hpp  Window.hpp
src/: Bricks.cpp  Ground.cpp  IandC_Brick.cpp  Main.cpp  Menu.cpp  main.cpp  settings.cpp
